# TiGEr-Eval

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  upload_pypi.sh
src/tiger_eval/: __init__.py  __main__.py  cross_lingual_assessment.py  feed.py  multichoice_align.py  multichoice_question.py  open_qa_emotion_eval.py  open_qa_eval.py  open_question_answer_with_ref.py  open_question_answer_with_ref_binary.py  open_question_answer_with_ref_binary_gender.py  open_question_answer_with_ref_binary_nationality.py  open_question_model_judge.py  rouge.py  translation_bleu.py
