[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiger_eval"
version = "0.0.1"
description = "Text Generation Evaluation Toolkit"
readme = "README.md"
authors = [
    { name = "Bin Wang"},
    { name = "Zhengyuan Liu"},
    { name = "Geyu Lin"},
    ]

license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["evaluation", "text", "generation"]
dependencies = [
    "feedparser", 
    "html2text", 
    'tomli; python_version < "3.11"'
    ]

requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    tiger_eval = "tiger_eval.__main__:main"

    [project.urls]
    repository    = "https://github.com/SeaEval/TiGEr_Eval"
    documentation = "https://github.com/SeaEval/TiGEr_Eval"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/tiger_eval/__init__.py" = ["{version}"]
    "src/tiger_eval/__main__.py" = ["- tiger_eval v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "feedparser"
    ignore_missing_imports = true
